--- a/simple-tasks/package.json
+++ b/simple-tasks/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "nanoid": "^5.1.5",
     "vue": "^3.5.13"
   },
   "devDependencies": {
